	to shimbun-asahi-subgroups-alist; move subgroups of job, kansai,
	national, politics, shopping and sports groups to
	shimbun-asahi-subgroups-alist; fix regexp for science group.
	(shimbun-asahi-subgroups-alist): Rearrange international subgroups;
	add subgroups for job, kansai, life.column, national, politics,
	shopping and sports groups.
	(shimbun-asahi-prepare-article): Follow
	shimbun-asahi-subgroups-alist change.

2007-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Move subgroups
	of housing and international groups to
	shimbun-asahi-subgroups-alist.
	(shimbun-asahi-subgroups-alist): Add subgroups for housing, igo
	and international groups.
	(shimbun-asahi-get-headers): Use http://www2.asahi.com/ to expand
	urls for articles in Iraq subgroup.
	(shimbun-asahi-prepare-article): Extract article for housing
	subgroups.

	* shimbun/sb-itmedia.el (shimbun-get-headers): New method; replace
	article urls with the ones to be redirected to.

2007-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Move subgroups
	of health group to shimbun-asahi-subgroups-alist.
	(shimbun-asahi-subgroups-alist): Add subgroups for health group.
	(shimbun-asahi-prepare-article): Remove ads, don't fetch useless
	images, and don't replace From with reviewer for book groups;
	remove useless things for all groups.

	* shimbun/shimbun.el (shimbun-japanese-hankaku-region): Add a
	special treatment for zenkaku apostrophes.

2007-04-06  Matt Hodges  <M.P.Hodges@rl.ac.uk>

	* w3m.el (w3m-next-buffer): Fix last change when w3m-fb-mode.

2007-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-parent-page): Use numbered prefix argument to
	move the parent directory according to input number.

2007-04-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add food group;
	remove life.food and shopping.kishi groups; move subgroups of